--- a/src/components/atoms/CommonButton/styles.module.css
+++ b/src/components/atoms/CommonButton/styles.module.css
@@ -1,22 +1,13 @@
-.container:not(:last-child) {
-  margin-bottom: 20px;
-}
-
-.textarea {
-  display: block;
-  box-sizing: border-box;
-  color: #fff;
-  background-color: #71027b;
+.wrapper {
+  background-color: #fade60;
   border-radius: 8px;
-  font-size: 18px;
-  padding: 15px 10px;
-  width: 100%;
-  height: 200px;
-  resize: none;
+  text-align: center;
 }
 
-.textarea::placeholder {
-  color: #fff;
-  opacity: 0.6;
-  font-family: serif, sans-serif;
+.button {
+  font-size: 20px;
+  font-weight: bold;
+  padding: 16px 10px;
+  color: #d983fc;
+  width: 100%;
 }
