create: detail & edit page path

--- a/src/components/organisms/TodoList/styles.module.css
+++ b/src/components/organisms/TodoList/styles.module.css
@@ -20,6 +20,9 @@
 }
 
 .button {
-  width: 30px;
-  height: 30px;
+  width: 35px;
+  height: 35px;
+}
+.button:not(:last-child) {
+  margin-right: 10px;
 }
